add the Tengxun-sport

--- a/product/demo.html
+++ b/product/demo.html
@@ -26,7 +26,7 @@
 			<div class="explore">发现</div>
 			<div class="me">我</div>
 		</footer>
-		<div class="dialog"></div>
+		<!-- <div class="dialog"></div> -->
 		<script src="./js/demo.js"></script>
 	</body>
 </html>
