--- a/product/drag.html
+++ b/product/drag.html
@@ -7,7 +7,10 @@
 		<title>Mobile</title>
 	</head>
 	<body>
-		<div class="box"></div>
+		<div class="taskBox">
+			<div class="task"></div>
+		</div>
+		<div class="dustbin"></div>
 		<script src="./js/drag.js"></script>
 	</body>
 </html>
